tests/solidity/bad/consargs.sol
contract Abstract {
  constructor(uint x) public {}
  function f() pure public {}
  function echidna_f() pure public returns (bool) {return true;}
}
